--- a/src/screens/home/ui/IntegrateSection/IntegrateSection.module.scss
+++ b/src/screens/home/ui/IntegrateSection/IntegrateSection.module.scss
@@ -1,5 +1,5 @@
 .section {
-  @apply flex flex-col xl:flex-row items-center justify-between xl:gap-20;
+  @apply flex flex-col xl:flex-row items-center justify-between gap-10 sm:gap-20;
 
   > .info {
     @apply flex flex-col items-center xl:items-start gap-6 relative;
@@ -18,20 +18,20 @@
   }
 
   .brands {
-    @apply hidden sm:grid grid-cols-3 w-3/4 relative divide-x divide-y divide-white/30;
+    @apply grid grid-cols-3 justify-items-center sm:w-3/4 relative sm:divide-x sm:divide-y sm:divide-white/30;
 
     &::after {
-      @apply absolute left-0 top-0 w-full h-full;
+      @apply hidden sm:block absolute left-0 top-0 w-full h-full;
       content: "";
       background: radial-gradient(
-                      circle 17em at center,
-                      rgba(0, 0, 0, 0),
-                      rgba(30, 30, 30, 1)
+        circle 17em at center,
+        rgba(0, 0, 0, 0),
+        rgba(30, 30, 30, 1)
       );
     }
 
     span {
-      @apply w-full h-40 p-10;
+      @apply w-32 sm:w-full h-32 p-10 flex-shrink-0;
 
       svg {
         @apply w-full h-full;
